# awrit

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOLLOW_UP.md  LICENSE.txt  README.md  SCROLL_SMOOTHNESS_INVESTIGATION.md  awrit  biome.json  config.example.js  config.js  glimpse-tty  markdown-test.md  mise.toml  package-lock.json  package.json  setup.sh  tsconfig.json
.github/: dependabot.yml
.github/workflows/: CD.yml  CI.yml  release.yml
awrit-native-rs/: Cargo.toml  biome.json  index.d.ts  index.js  input-test.js  package.json  run-shim
awrit-native-rs/crates/bgra-to-rgba/src/: lib.rs
awrit-native-rs/crates/crossterm/: Cargo.toml
awrit-native-rs/crates/crossterm/src/: event.rs  terminal.rs
awrit-native-rs/crates/crossterm/src/event/: filter.rs
awrit-native-rs/crates/crossterm/src/event/sys/unix/: parse.rs
awrit-native-rs/crates/crossterm/src/terminal/: sys.rs
awrit-native-rs/crates/crossterm/src/terminal/sys/: unix.rs
awrit-native-rs/scripts/: convert-types.js  download-binary.js
awrit-native-rs/src/: input.rs  lib.rs  term.rs
docs/: get  index.html
glimpse-tty-native-rs/: Cargo.toml  biome.json  build.rs  index.d.ts  index.js  package.json
patches/: solid-js@1.9.5.patch
scripts/: build.ts  pack.sh  release.sh  run-build.ts
src/: abort.ts  args.ts  console.ts  debounce.ts  dpi.ts  extensions.ts  fake-timers.test.ts  features.ts  index.ts  inputHandler.ts  keybindings.test.ts  keybindings.ts  layout.test.ts  paint.ts  preload.js  registerPaintedContent.ts  root.test.ts  root.ts  session.ts  windows.ts
(+27 files in other folders)
