[package]
name = "awrit-native-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nix = { version = "0.29.0", features = ["fs", "mman"] }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.14.1", default-features = false, features = ["napi4"] }
napi-derive = "2.14.1"
base64 = "0.22.1"
bgra-to-rgba = { path = "crates/bgra-to-rgba" }
crossterm = { path = "crates/crossterm" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
